[metadata]
name = IgMAT
version = 1.0.0
description = Antibody Multispecies Annotation Tool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
package_dir =
	=src
include_package_data = True

[options.packages.find]
where=src
exclude=
	tests
	tests.*

[options.data_files]
muscle/linux = bin/linux/muscle
muscle/darwin = bin/darwin/muscle
muscle/win32 = bin/win32/muscle

[options.entry_points]
console_scripts =
	igmat = igmat.cli:main
